# inipp

./: .travis.yml  CMakeLists.txt  README.md  README.rst  appveyor.yml  inipp.sln
.clusterfuzzlite/: Dockerfile  build.sh  parse_fuzzer.cpp  project.yaml
example/: example.cpp  example.vcxproj
inipp/: inipp.h  inipp.vcxproj
nuget/: IniPP.nuspec
test/: runtest.cpp  runtest.vcxproj  runtest.vcxproj.filters  runtest_w.cpp  test.cpp  test.h  test.vcxproj  test.vcxproj.filters  test1.output  test2.ini  test2.output
unittest/: CMakeLists.txt  test.h  test1.output  test2.ini  test2.output  test3.ini  test3.output  test4.output  unittest-cmake.cpp  unittest-msvc.cpp  unittest.cpp  unittest.vcxproj  unittest.vcxproj.filters
