cmake_minimum_required(VERSION 2.8.12)
project(inipp)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include_directories("inipp/")
install(FILES inipp/inipp.h DESTINATION include)
option(INIPP_ENABLE_TESTING "Enable testing of inipp." ON)
if (INIPP_ENABLE_TESTING)
    enable_testing()
    add_subdirectory("unittest/")
endif()
